# rumpy-ts

./: CLAUDE.md  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml
benchmarks/: f32-benchmark.html  futex-benchmark.html  generate-numpy-tests.py  numpy-test-cases.json  package.json  test-numpy-compat.html
crates/pthreadpool-rs/: Cargo.toml
crates/pthreadpool-rs/src/: lib.rs  wasm_futex.rs
crates/rumpy-core/src/: dtype.rs  error.rs  lib.rs  ops.rs
crates/rumpy-cpu/: Cargo.toml
crates/rumpy-cpu/benches/: broadcasting.rs
crates/rumpy-cpu/src/: broadcast.rs  compare.rs  creation.rs  lib.rs  linalg.rs  manipulation.rs  math.rs  random.rs  simd_gemm.rs  sort.rs  stats.rs
crates/rumpy-tests/src/: creation.rs  lib.rs  linalg.rs  math.rs  stats.rs
crates/rumpy-wasm/: Cargo.toml
crates/rumpy-wasm/src/: lib.rs
docs/: GEMM-OPTIMIZATION-NOTES.md
tests/: creation.test.ts  index.test.ts  js-backend.ts  linalg.test.ts  manipulation.test.ts  math.test.ts  native-chrome-benchmark.html  package.json  phase2.test.ts  stats.test.ts  test-utils.ts  vitest.config.ts  wasm-backend.ts  webgpu-backend.ts
tests/wasm-pkg/: rumpy_wasm.d.ts  rumpy_wasm.js  rumpy_wasm_bg.wasm  rumpy_wasm_bg.wasm.d.ts
tests/wasm-pkg/snippets/wasm-bindgen-rayon-38edf6e439f6d70d/src/: workerHelpers.js
