[package]
name = "rumpy-wasm"
description = "WASM bindings for RumPy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rumpy-core = { path = "../rumpy-core" }
rumpy-cpu = { path = "../rumpy-cpu" }
pthreadpool-rs = { path = "../pthreadpool-rs", features = ["wasm-threads"] }
wasm-bindgen.workspace = true
wasm-bindgen-rayon.workspace = true
rayon.workspace = true
js-sys.workspace = true
web-sys.workspace = true
getrandom.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true

[profile.release]
opt-level = 3
lto = true
